<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.1</version>
		<relativePath />
		<!-- lookup parent from repository -->
	</parent>
	<groupId>com.optimagrowth</groupId>
	<artifactId>Ostock</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Optima Stock</name>
	<description>Optima Growth is a software development company whose core product, Optima
 Stock (O-stock), provides an enterprise-grade asset management application.</description>
	<properties>
		<java.version>21</java.version>
		<spring-cloud.version>2023.0.0</spring-cloud.version>
		<docker.image.prefix>ostock</docker.image.prefix>
	</properties>

	<modules>
		<module>configserver</module>
		<module>eurekaserver</module>
		<module>gatewayserver</module>
		<module>organization-service</module>
		<module>licensing-service</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>com.google.cloud.tools</groupId>
					<artifactId>jib-maven-plugin</artifactId>
					<version>3.4.0</version>
					<configuration>
						<from>
							<image>
								eclipse-temurin:21@sha256:96e31e0d459d05f4c9facaffb3b25a0b2c460e0c68614113c27d28dcc77d6ca6
							</image>
						</from>
						<to>
							<image>${docker.image.prefix}/${project.artifactId}</image>
							<tags>
								<tag>${project.version}</tag>
							</tags>
						</to>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>